--- a/src/utils/index.css
+++ b/src/utils/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 
+h1{
+    color: #fa1b95;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 2rem;
+} */
+
+
